# fetch-ethereum-bridge-v1

./: .cargo  .gitignore  .gitmodules  Readme.md  docker-compose.yml
.github/workflows/: Basic.yml
cosmos/: README.md
cosmos/cosmwasm_contract/: Cargo.toml
cosmos/cosmwasm_contract/src/: contract.rs  msg.rs  state.rs
cosmos/docker/: Dockerfile  entrypoint.sh
cosmos/scripts/: compile.sh
ethereum/: .dockerignore  .gitignore  Pipfile  README.md  brownie-config.yaml  networks-config.yaml  package-lock.json  package.json  truffle-config.js
ethereum/contracts/: Bridge.sol  BridgeMock.sol  FetERC20Mock.sol  IBridgeAdmin.sol  IBridgePublic.sol  IBridgeRelayer.sol  IERC20MintFacility.sol  IERC20Token.sol  Migrations.sol  MultisigCoordinator.sol
ethereum/docker/: Dockerfile  deploy.Dockerfile  deploy.sh  entrypoint.sh  test.sh
ethereum/interfaces/: IAccessControl.sol  IBridge.sol  IBridgeAdmin.sol  IBridgeCommon.sol  IBridgeMonitor.sol  IBridgePublic.sol  IBridgeRelayer.sol  IERC20MintFacility.sol  IERC20Token.sol
ethereum/migrations/: 3_deploy_bridge.js
ethereum/scripts/: deploy_bridge.py  deploy_erc20mock.py  deployment_common.py  deployment_manifest.json  deployment_manifest_schema.py
ethereum/tests/: bridge_test.py  multisig_coordinator_test.py
ethereum/utility/: constants.js
fetch/: README.md  bridge.wasm  cosmwasm_watch_contract_events.py
fetch/cosmwasm_contract/: Cargo.toml  NOTICE
fetch/cosmwasm_contract/.cargo/: config.toml
fetch/cosmwasm_contract/examples/: schema.rs
fetch/cosmwasm_contract/schema/: execute_msg.json  instantiate_msg.json  paused_since_block_response.json  query_msg.json  relay_eon_response.json  role_response.json  supply_response.json
fetch/cosmwasm_contract/src/: access_control.rs  contract.rs  error.rs  helpers.rs  legacy_state.rs  lib.rs  migrate.rs  migration.rs  msg.rs  state.rs  tests.rs
fetch/cosmwasm_contract/tests/: integration.rs
fetch/docker/: 00_setup_fetchd_local_v0.6.0.sh  00_setup_wasmd_local.sh  Dockerfile  Dockerfile.wasmd  entrypoint.sh  entrypoint_fetchd_v0.6.0.sh  entrypoint_v0.9.1.sh
fetch/ledger/: Dockerfile  contractdeploy.Dockerfile  deploy-bridge.sh  run-node.sh
fetch/scripts/: compile.sh  docker_compile.sh
