[package]
name = "bridge"
version = "0.1.0"
authors = ["root"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib

[dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_2_0"
] }
cw-storage-plus = "2.0.0"
schemars = "0.8.1"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }

[dev-dependencies]
cosmwasm-vm = { version = "2.2.0", default-features = false }
cosmwasm-schema = { version = "2.2.0" }
