[package]
name = "bridge"
version = "0.3.0"
authors = ["root"]
edition = "2024"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib

# Requires cargo-run-script to run commands from [package.metadata.scripts].
#
# Install once:
#   cargo install cargo-run-script
#
# Run:
#   cargo run-script optimize
[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.17.0
"""


[dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_2_0"
] }
cw-storage-plus = "2.0.0"
schemars = "0.8.1"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
prost = "0.14.3"
cw2 = "2.0.0"

[dev-dependencies]
cosmwasm-vm = { version = "2.2.0", default-features = false }
cosmwasm-schema = { version = "2.2.0" }
